...
                    child: Column(
                      mainAxisAlignment: MainAxisAlignment.center,
                      crossAxisAlignment: CrossAxisAlignment.center,
                      children: [
                        const SizedBox(height: 60),
                        const Text(
                          'تسجيل الدخول',
                          style: TextStyle(
                            fontSize: 26,
                            fontWeight: FontWeight.bold,
                            color: Colors.black,
                            fontFamily: 'alfont',
                          ),
...
                            ),
                          ),
                        ],
                        const SizedBox(height: 20),
                        // Submit button
                        _buildButton(
                          text: 'تسجيل',
                          onPressed: () async {
                            final connectivityResult = await Connectivity().checkConnectivity();
                            if (connectivityResult == ConnectivityResult.none) {
                              setState(() {
                                _errorMessage = 'لا يوجد اتصال بالإنترنت. يرجى التحقق من الشبكة.';
                              });
...
