...
                          ],
                        ),
                        const SizedBox(height: 15),
                        // Gender dropdown
                        _buildDropdownField(
                          hintText: 'الجنس',
                          items: ['ذكر', 'أنثى']
                              .map((item) => DropdownMenuItem(
                                    value: item,
                                    child: Text(item, style: const TextStyle(fontFamily: 'alfont', color: Colors.black)),
                                  ))
                              .toList(),
                          value: _selectedGender,
...
                          onChanged: (value) => setState(() => _selectedAge = value),
                          validator: (value) => value == null ? 'هذا الحقل مطلوب' : null,
                        ),
                        const SizedBox(height: 30),
                        // Submit button
                        _buildButton(
                          text: 'إضافة',
                          onPressed: _submit,
                        ),
                      ],
                    ),
                  ),
                ),
...
