...
                  child: GridView.count(
                    crossAxisCount: 2,
                    crossAxisSpacing: 10,
                    mainAxisSpacing: 10,
                    children: [
                      buildMenuItem('رحلة الأحرف', Colors.lightBlue[100]!, 'ض'),
                      buildMenuItem('رحلة الأرقام', Colors.purple[100]!, '١٢٣'),
                      buildMenuItem('رحلة الكلمات', Colors.yellow[100]!, 'ن ت ع ل م'),
                      buildMenuItem('القيم الأخلاقية', Colors.pink[100]!, Icons.shield),
                    ],
                  ),
                ),
              ),

              // Image Scanner Button
...
