...
                  ),
                  child: Stack(
  children: [
    Align(
      alignment: Alignment.center,
      child: Text(
        "التالي",
        style: TextStyle(
          fontSize: 40,
          color: Color(0xFF3F414E),
          fontFamily: "Blabeloo",
        ),
      ),
...
