...
  }

/// Displays a dialog showing whether the answer was correct or incorrect, and navigates based on the result.
void _showAnswerDialog(bool isCorrect, [String? earnedStickerUrl]) async {
  String message = isCorrect ? "إجابةٌ صَحِيحَةٌ! أَكْمِلِ التَّعَلُّمَ" : "إجابةٌ خَاطِئَةٌ! حَاوِلْ مَرَّةً أُخْرَى.";
  String visualText = isCorrect
    ? "إجابة صحيحة! أكمل التعلم."
    : "إجابة خاطئة! حاول مرة أخرى.";
  Color textColor = isCorrect ? Colors.green : Colors.red;
  String buttonText = "حسنًا";

  Widget nextPage;
  switch (widget.type) {
    case "letter":
...
