...
                            return null;
                          },
                        ),
                        const SizedBox(height: 30),
                        // continue button
                        _buildButton(
                          text: 'متابعة',
                          onPressed: () async {
                            if (_formKey.currentState!.validate()) {
                              setState(() {
                                _emailError = null;
                              });

...
